tdf#132788 vcl: fix redraw on theme change

Regression from commit f4e0cc1ff145287f80738f070a8c46a64b2f76d1
(tdf#92079 vcl: fix missing image background on dialog from basic,
2019-06-13), the original scenario was about an unexpected change from
bitmap wallpaper to a non-bitmap one.

That means the condition for the above change can be more strict: just
restore the old wallpaper if it's now a non-bitmap one, otherwise leave
it alone. This way the above scenario keeps working and changing themes
again doesn't require a restart of the process.

(cherry picked from commit 52389ed19da6bcfdedef909532913ff3e2ab4afc)

Change-Id: I256372ad30184cc150d6819dd61cdd38af7d83ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94194
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>